--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -3,12 +3,30 @@ on:
   push:
     branches:
       - main
+
 jobs:
   sonarcloud:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@master
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Setup Java (required by SonarScanner)
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      - name: Install SonarScanner
+        run: |
+          npm install -g sonar-scanner
+
+      - name: Run SonarCloud Scan
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: |
+          sonar-scanner \
+            -Dsonar.projectKey=erikjoelflorescanaza-beep_lab8-sonarqube-demo \
+            -Dsonar.organization=erikjoelflorescanaza-beep \
+            -Dsonar.host.url=https://sonarcloud.io \
+            -Dsonar.login=$SONAR_TOKEN
